<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format3>
  <name>mars_simulation</name>
  <version>0.0.0</version>
  <description>ROS 2 Mars Rover Simulation Node with Network Bridge</description>
  <maintainer email="nate@example.com">Nate</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
